--- a/cookbooks/desktop/templates/default/gitconfig.erb
+++ b/cookbooks/desktop/templates/default/gitconfig.erb
@@ -1,12 +1,12 @@
 [user]
-    email = 
-    name = 
+    email =
+    name =
 [alias]
     co = checkout
     ci = commit
     st = status
     br = branch
-    hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
+    hist = log --pretty=format:\"%C(yellow)%h%Creset %C(cyan)%ad%Creset | %s%Cred%d%Creset %Cgreen(%cr)%Creset [%C(bold blue)%an%Creset]\" --graph --date=short
     type = cat-file -t
     dump = cat-file -p
     l = log --stat
